--- a/frontend/src/app/admin/quote-management/quote-management.html
+++ b/frontend/src/app/admin/quote-management/quote-management.html
@@ -1,5 +1,6 @@
 <div class="quote-management">
-  <h1>Quote Data Management</h1>
+  <app-admin-header title="Quote Management">
+  </app-admin-header>
 
   <div *ngIf="message" class="alert alert-success">{{ message }}</div>
   <div *ngIf="error" class="alert alert-error">{{ error }}</div>
