--- a/frontend/src/app/staff/report/staff-report.html
+++ b/frontend/src/app/staff/report/staff-report.html
@@ -1,5 +1,6 @@
 <div class="staff-report-container">
-  <h1>Daily Staff Report</h1>
+  <app-staff-header title="Daily Staff Report">
+  </app-staff-header>
 
   <form (submit)="submitReport(); $event.preventDefault()">
     <div class="report-meta">
