--- a/frontend/src/app/staff/staff-management/staff-management.html
+++ b/frontend/src/app/staff/staff-management/staff-management.html
@@ -1,5 +1,6 @@
 <div class="staff-management-container">
-  <h1>Staff Info</h1>
+  <app-staff-header title="Staff Info">
+  </app-staff-header>
 
   <!-- ✅ My Profile -->
   <div class="my-profile-card">
