--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,3 +9,29 @@ body {
   background-color: #f4f6fb;
   color: #222;
 }
+
+input[type="time"] {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23666a7a' stroke-width='1.8' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='8'/%3E%3Cpolyline points='12 8 12 12.5 15 14'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 18px 18px;
+  padding-right: 40px;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  display: block;
+  cursor: pointer;
+}
+
+input[type="time"]::-webkit-clear-button,
+input[type="time"]::-webkit-inner-spin-button {
+  display: block;
+}
+
+@supports selector(input[type="time"]::-moz-focus-inner) {
+  input[type="time"] {
+    padding-right: 16px;
+    background-image: none;
+  }
+}
