--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -27,9 +27,10 @@
     <!-- Error message -->
     <p *ngIf="error" class="error">{{ error }}</p>
 
-    <!-- Forgot Password Link -->
+    <!-- Forgot password flow not implemented; link intentionally disabled.
     <p class="forgot-password">
       <a routerLink="/forgot-password">Forgot Password?</a>
     </p>
+    -->
   </form>
 </div>
